@@ -20,6 +20,7 @@
     <PackageReleaseNotes>- New Analyzer: PH_P013 - Discouraged EntityFramework Method
 - Renamed Analyzer: PH_P003 - Discouraged Thread Method (was Discouraged Method)
 - Renamed Analyzer: PH_P005 - Blocking Wait on Async Method (was Missing Gate-Keeper)
+- Renamed Analyzer: PH_B009 - Incomplete Monitor Synchronization on Multiple Fields (was Missing Monitor Synchronization)
 - Improved Analyzer: PH_B014 - Now reports await of as-expressions
 - Improved Analyzer: PH_P005 - Now reports blocking accesses on ValueTasks
 - Improved Analyzer: PH_S026 - Now reports blocking accesses on ValueTasks</PackageReleaseNotes>
